<?xml version="1.0"?>
<package format="2">
  <name>traversability_test</name>
  <version>0.4.0</version>
  <description>ROS package for traversability_test.</description>
  <maintainer email="aaa@bbb.com">aaa</maintainer>
  <author email="aaa@bbb.com">aaa</author>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>message_filters</depend>
  <depend>cmake_modules</depend>
  <build_export_depend>eigen</build_export_depend>


</package>
